changed some files
